# serializer version: 1
# name: test_generate_automation_full_feature_snapshot
  '''
  id: ha_notifications_full_feature
  alias: 'HA Notifications: Full feature'
  description: Generated by HA Notifications. Do not edit manually.
  initial_state: true
  mode: parallel
  triggers:
  - trigger: state
    entity_id: binary_sensor.door
  - trigger: state
    entity_id: binary_sensor.window
  - trigger: state
    entity_id: sensor.temperature
  - trigger: homeassistant
    event: start
  conditions:
  - condition: and
    conditions:
    - condition: or
      conditions:
      - condition: state
        entity_id: binary_sensor.door
        state: 'on'
      - condition: numeric_state
        entity_id: sensor.temperature
        above: 30
    - condition: state
      entity_id: binary_sensor.window
      state: 'on'
  actions:
  - action: ha_notifications.report
    data:
      alert_id: full_feature
      alert_name: Full feature
      flow_id: '{{ context.parent_id or context.id }}'
      status: started
      run_id: '{{ context.parent_id or context.id }}'
      details:
        action: automation_started
        started_by:
          platform: '{{ trigger.platform if trigger is defined and trigger.platform
            is defined else '''' }}'
          id: '{{ trigger.id if trigger is defined and trigger.id is defined else ''''
            }}'
          description: '{{ (trigger | default({})).description | default('''', true)
            }}'
          entity_id: '{{ trigger.entity_id if trigger is defined and trigger.entity_id
            is defined else '''' }}'
          from_state: '{{ trigger.from_state.state if trigger is defined and trigger.from_state
            is defined and trigger.from_state else '''' }}'
          to_state: '{{ trigger.to_state.state if trigger is defined and trigger.to_state
            is defined and trigger.to_state else '''' }}'
          event_type: '{{ trigger.event.event_type if trigger is defined and trigger.platform
            == ''event'' and trigger.event is defined and trigger.event else '''' }}'
  - action: ha_notifications.send
    data:
      alert_id: full_feature
      alert_name: Full feature
      flow_id: '{{ context.parent_id or context.id }}'
      target:
        entity_id:
        - notify.mobile_app_phone
      data:
        message: Door open
        actions:
        - action: ha_notifications_full_feature_confirmation_confirm
          title: Confirm
  - action: logbook.log
    data:
      name: Full feature sent
  - action: ha_notifications.report
    data:
      alert_id: full_feature
      alert_name: Full feature
      flow_id: '{{ context.parent_id or context.id }}'
      status: action_executed
      run_id: '{{ context.parent_id or context.id }}'
      message: Automation action executed
      details:
        action: logbook.log
  - action: ha_notifications.report
    data:
      alert_id: full_feature
      alert_name: Full feature
      flow_id: '{{ context.parent_id or context.id }}'
      status: waiting
      run_id: '{{ context.parent_id or context.id }}'
      message: Waiting for confirmation
      details:
        action: confirmation_waiting
  - wait_for_trigger:
    - trigger: event
      event_type: mobile_app_notification_action
      id: confirmation
      event_data:
        action: ha_notifications_full_feature_confirmation_confirm
    - trigger: event
      event_type: ha_notifications_command
      id: cancel_run
      event_data:
        alert_id: full_feature
        command: cancel_run
    - trigger: event
      event_type: ha_notifications_command
      id: skip_confirmation
      event_data:
        alert_id: full_feature
        command: skip_confirmation
    timeout:
      minutes: 15
    continue_on_timeout: true
  - choose:
    - conditions:
      - condition: template
        value_template: '{{ wait.trigger.id == ''confirmation'' }}'
      sequence:
      - action: ha_notifications.send
        data:
          alert_id: full_feature
          alert_name: Full feature
          flow_id: '{{ context.parent_id or context.id }}'
          target:
            entity_id:
            - notify.mobile_app_phone
          data:
            template_message: '{% raw %}Confirmed{% endraw %}'
            confirmation_device_id: '{{ wait.trigger.event.data.device_id | default('''',
              true) }}'
            confirmation_user_id: '{{ wait.trigger.event.context.user_id | default('''',
              true) }}'
      - action: light.turn_on
        target:
          entity_id: light.hall
      - action: ha_notifications.report
        data:
          alert_id: full_feature
          alert_name: Full feature
          flow_id: '{{ context.parent_id or context.id }}'
          status: action_executed
          run_id: '{{ context.parent_id or context.id }}'
          message: Automation action executed
          details:
            action: light.turn_on
      - action: ha_notifications.report
        data:
          alert_id: full_feature
          alert_name: Full feature
          flow_id: '{{ context.parent_id or context.id }}'
          status: confirmation_completed
          run_id: '{{ context.parent_id or context.id }}'
          message: Confirmation completed
          details:
            action: confirmation_completed
            device_id: '{{ wait.trigger.event.data.device_id | default('''', true) }}'
            user_id: '{{ wait.trigger.event.context.user_id | default('''', true) }}'
      - stop: confirmation completed
    - conditions:
      - condition: template
        value_template: '{{ wait.trigger.id == ''cancel_run'' }}'
      sequence:
      - action: ha_notifications.report
        data:
          alert_id: full_feature
          alert_name: Full feature
          flow_id: '{{ context.parent_id or context.id }}'
          status: cancelled
          run_id: '{{ context.parent_id or context.id }}'
          message: Automation run cancelled
          details:
            action: confirmation_cancelled
      - stop: Confirmation ended
    default:
    - repeat:
        count: 5
        sequence:
        - action: ha_notifications.send
          data:
            alert_id: full_feature
            alert_name: Full feature
            flow_id: '{{ context.parent_id or context.id }}'
            target:
              entity_id:
              - notify.mobile_app_phone
            data:
              message: Door open
              actions:
              - action: ha_notifications_full_feature_confirmation_confirm
                title: Confirm
            title: Confirmation - Attempt {{ repeat.index + 1 }}/5
        - action: ha_notifications.report
          data:
            alert_id: full_feature
            alert_name: Full feature
            flow_id: '{{ context.parent_id or context.id }}'
            status: confirmation_reminder
            message: Confirmation reminder sent
            details:
              action: confirmation_reminder
              repeat: '{{ repeat.index }}'
        - action: ha_notifications.report
          data:
            alert_id: full_feature
            alert_name: Full feature
            flow_id: '{{ context.parent_id or context.id }}'
            status: waiting
            run_id: '{{ context.parent_id or context.id }}'
            message: Waiting for confirmation
            details:
              action: confirmation_waiting
        - wait_for_trigger:
          - trigger: event
            event_type: mobile_app_notification_action
            id: confirmation
            event_data:
              action: ha_notifications_full_feature_confirmation_confirm
          - trigger: event
            event_type: ha_notifications_command
            id: cancel_run
            event_data:
              alert_id: full_feature
              command: cancel_run
          - trigger: event
            event_type: ha_notifications_command
            id: skip_confirmation
            event_data:
              alert_id: full_feature
              command: skip_confirmation
          timeout:
            minutes: 15
          continue_on_timeout: true
        - choose:
          - conditions:
            - condition: template
              value_template: '{{ wait.trigger.id == ''confirmation'' }}'
            sequence:
            - action: ha_notifications.send
              data:
                alert_id: full_feature
                alert_name: Full feature
                flow_id: '{{ context.parent_id or context.id }}'
                target:
                  entity_id:
                  - notify.mobile_app_phone
                data:
                  template_message: '{% raw %}Confirmed{% endraw %}'
                  confirmation_device_id: '{{ wait.trigger.event.data.device_id | default('''',
                    true) }}'
                  confirmation_user_id: '{{ wait.trigger.event.context.user_id | default('''',
                    true) }}'
            - action: light.turn_on
              target:
                entity_id: light.hall
            - action: ha_notifications.report
              data:
                alert_id: full_feature
                alert_name: Full feature
                flow_id: '{{ context.parent_id or context.id }}'
                status: action_executed
                run_id: '{{ context.parent_id or context.id }}'
                message: Automation action executed
                details:
                  action: light.turn_on
            - action: ha_notifications.report
              data:
                alert_id: full_feature
                alert_name: Full feature
                flow_id: '{{ context.parent_id or context.id }}'
                status: confirmation_completed
                run_id: '{{ context.parent_id or context.id }}'
                message: Confirmation completed
                details:
                  action: confirmation_completed
                  device_id: '{{ wait.trigger.event.data.device_id | default('''', true)
                    }}'
                  user_id: '{{ wait.trigger.event.context.user_id | default('''', true)
                    }}'
            - stop: confirmation completed
          - conditions:
            - condition: template
              value_template: '{{ wait.trigger.id == ''cancel_run'' }}'
            sequence:
            - action: ha_notifications.report
              data:
                alert_id: full_feature
                alert_name: Full feature
                flow_id: '{{ context.parent_id or context.id }}'
                status: cancelled
                run_id: '{{ context.parent_id or context.id }}'
                message: Automation run cancelled
                details:
                  action: confirmation_cancelled
            - stop: Confirmation ended
          default: []
    - action: ha_notifications.report
      data:
        alert_id: full_feature
        alert_name: Full feature
        flow_id: '{{ context.parent_id or context.id }}'
        status: confirmation_timeout
        run_id: '{{ context.parent_id or context.id }}'
        message: Confirmation timed out
        details:
          action: confirmation_timeout
    - stop: Confirmation ended
  '''
# ---
# name: test_option_matrix_generates_valid_native_automations[baseline-overrides0]
  '''
  id: ha_notifications_matrix_baseline
  alias: 'HA Notifications: Low water'
  description: Generated by HA Notifications. Do not edit manually.
  initial_state: true
  mode: parallel
  triggers:
  - trigger: state
    entity_id: sensor.water
  - trigger: homeassistant
    event: start
  conditions:
  - condition: numeric_state
    entity_id: sensor.water
    below: 20
  actions:
  - action: ha_notifications.report
    data:
      alert_id: matrix_baseline
      alert_name: Low water
      flow_id: '{{ context.parent_id or context.id }}'
      status: started
      run_id: '{{ context.parent_id or context.id }}'
      details:
        action: automation_started
        started_by:
          platform: '{{ trigger.platform if trigger is defined and trigger.platform
            is defined else '''' }}'
          id: '{{ trigger.id if trigger is defined and trigger.id is defined else ''''
            }}'
          description: '{{ (trigger | default({})).description | default('''', true)
            }}'
          entity_id: '{{ trigger.entity_id if trigger is defined and trigger.entity_id
            is defined else '''' }}'
          from_state: '{{ trigger.from_state.state if trigger is defined and trigger.from_state
            is defined and trigger.from_state else '''' }}'
          to_state: '{{ trigger.to_state.state if trigger is defined and trigger.to_state
            is defined and trigger.to_state else '''' }}'
          event_type: '{{ trigger.event.event_type if trigger is defined and trigger.platform
            == ''event'' and trigger.event is defined and trigger.event else '''' }}'
  - action: ha_notifications.send
    data:
      alert_id: matrix_baseline
      alert_name: Low water
      flow_id: '{{ context.parent_id or context.id }}'
      target:
        entity_id:
        - notify.phone
        - notify.tablet
      data:
        message: Low water
  - action: ha_notifications.report
    data:
      alert_id: matrix_baseline
      alert_name: Low water
      flow_id: '{{ context.parent_id or context.id }}'
      status: completed
      run_id: '{{ context.parent_id or context.id }}'
      details:
        action: automation_completed
  '''
# ---
# name: test_option_matrix_generates_valid_native_automations[confirmation_with_bounded_repeat-overrides3]
  '''
  id: ha_notifications_matrix_confirmation_with_bounded_repeat
  alias: 'HA Notifications: Low water'
  description: Generated by HA Notifications. Do not edit manually.
  initial_state: true
  mode: parallel
  triggers:
  - trigger: state
    entity_id: sensor.water
  - trigger: homeassistant
    event: start
  conditions:
  - condition: numeric_state
    entity_id: sensor.water
    below: 20
  actions:
  - action: ha_notifications.report
    data:
      alert_id: matrix_confirmation_with_bounded_repeat
      alert_name: Low water
      flow_id: '{{ context.parent_id or context.id }}'
      status: started
      run_id: '{{ context.parent_id or context.id }}'
      details:
        action: automation_started
        started_by:
          platform: '{{ trigger.platform if trigger is defined and trigger.platform
            is defined else '''' }}'
          id: '{{ trigger.id if trigger is defined and trigger.id is defined else ''''
            }}'
          description: '{{ (trigger | default({})).description | default('''', true)
            }}'
          entity_id: '{{ trigger.entity_id if trigger is defined and trigger.entity_id
            is defined else '''' }}'
          from_state: '{{ trigger.from_state.state if trigger is defined and trigger.from_state
            is defined and trigger.from_state else '''' }}'
          to_state: '{{ trigger.to_state.state if trigger is defined and trigger.to_state
            is defined and trigger.to_state else '''' }}'
          event_type: '{{ trigger.event.event_type if trigger is defined and trigger.platform
            == ''event'' and trigger.event is defined and trigger.event else '''' }}'
  - action: ha_notifications.send
    data:
      alert_id: matrix_confirmation_with_bounded_repeat
      alert_name: Low water
      flow_id: '{{ context.parent_id or context.id }}'
      target:
        entity_id:
        - notify.phone
        - notify.tablet
      data:
        message: Low water
        actions:
        - action: ha_notifications_matrix_confirmation_with_bounded_repeat_confirmation_confirm
          title: Confirm
  - action: ha_notifications.report
    data:
      alert_id: matrix_confirmation_with_bounded_repeat
      alert_name: Low water
      flow_id: '{{ context.parent_id or context.id }}'
      status: waiting
      run_id: '{{ context.parent_id or context.id }}'
      message: Waiting for confirmation
      details:
        action: confirmation_waiting
  - wait_for_trigger:
    - trigger: event
      event_type: mobile_app_notification_action
      id: confirmation
      event_data:
        action: ha_notifications_matrix_confirmation_with_bounded_repeat_confirmation_confirm
    - trigger: event
      event_type: ha_notifications_command
      id: cancel_run
      event_data:
        alert_id: matrix_confirmation_with_bounded_repeat
        command: cancel_run
    - trigger: event
      event_type: ha_notifications_command
      id: skip_confirmation
      event_data:
        alert_id: matrix_confirmation_with_bounded_repeat
        command: skip_confirmation
    timeout:
      minutes: 1
    continue_on_timeout: true
  - choose:
    - conditions:
      - condition: template
        value_template: '{{ wait.trigger.id == ''confirmation'' }}'
      sequence:
      - action: ha_notifications.send
        data:
          alert_id: matrix_confirmation_with_bounded_repeat
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          target:
            entity_id:
            - notify.phone
            - notify.tablet
          data:
            template_message: '{% raw %}Confirmed{% endraw %}'
            confirmation_device_id: '{{ wait.trigger.event.data.device_id | default('''',
              true) }}'
            confirmation_user_id: '{{ wait.trigger.event.context.user_id | default('''',
              true) }}'
      - action: light.turn_on
      - action: ha_notifications.report
        data:
          alert_id: matrix_confirmation_with_bounded_repeat
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          status: action_executed
          run_id: '{{ context.parent_id or context.id }}'
          message: Automation action executed
          details:
            action: light.turn_on
      - action: ha_notifications.report
        data:
          alert_id: matrix_confirmation_with_bounded_repeat
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          status: confirmation_completed
          run_id: '{{ context.parent_id or context.id }}'
          message: Confirmation completed
          details:
            action: confirmation_completed
            device_id: '{{ wait.trigger.event.data.device_id | default('''', true) }}'
            user_id: '{{ wait.trigger.event.context.user_id | default('''', true) }}'
      - stop: confirmation completed
    - conditions:
      - condition: template
        value_template: '{{ wait.trigger.id == ''cancel_run'' }}'
      sequence:
      - action: ha_notifications.report
        data:
          alert_id: matrix_confirmation_with_bounded_repeat
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          status: cancelled
          run_id: '{{ context.parent_id or context.id }}'
          message: Automation run cancelled
          details:
            action: confirmation_cancelled
      - stop: Confirmation ended
    default:
    - repeat:
        count: 2
        sequence:
        - action: ha_notifications.send
          data:
            alert_id: matrix_confirmation_with_bounded_repeat
            alert_name: Low water
            flow_id: '{{ context.parent_id or context.id }}'
            target:
              entity_id:
              - notify.phone
              - notify.tablet
            data:
              message: Low water
              actions:
              - action: ha_notifications_matrix_confirmation_with_bounded_repeat_confirmation_confirm
                title: Confirm
        - action: ha_notifications.report
          data:
            alert_id: matrix_confirmation_with_bounded_repeat
            alert_name: Low water
            flow_id: '{{ context.parent_id or context.id }}'
            status: confirmation_reminder
            message: Confirmation reminder sent
            details:
              action: confirmation_reminder
              repeat: '{{ repeat.index }}'
        - action: ha_notifications.report
          data:
            alert_id: matrix_confirmation_with_bounded_repeat
            alert_name: Low water
            flow_id: '{{ context.parent_id or context.id }}'
            status: waiting
            run_id: '{{ context.parent_id or context.id }}'
            message: Waiting for confirmation
            details:
              action: confirmation_waiting
        - wait_for_trigger:
          - trigger: event
            event_type: mobile_app_notification_action
            id: confirmation
            event_data:
              action: ha_notifications_matrix_confirmation_with_bounded_repeat_confirmation_confirm
          - trigger: event
            event_type: ha_notifications_command
            id: cancel_run
            event_data:
              alert_id: matrix_confirmation_with_bounded_repeat
              command: cancel_run
          - trigger: event
            event_type: ha_notifications_command
            id: skip_confirmation
            event_data:
              alert_id: matrix_confirmation_with_bounded_repeat
              command: skip_confirmation
          timeout:
            minutes: 1
          continue_on_timeout: true
        - choose:
          - conditions:
            - condition: template
              value_template: '{{ wait.trigger.id == ''confirmation'' }}'
            sequence:
            - action: ha_notifications.send
              data:
                alert_id: matrix_confirmation_with_bounded_repeat
                alert_name: Low water
                flow_id: '{{ context.parent_id or context.id }}'
                target:
                  entity_id:
                  - notify.phone
                  - notify.tablet
                data:
                  template_message: '{% raw %}Confirmed{% endraw %}'
                  confirmation_device_id: '{{ wait.trigger.event.data.device_id | default('''',
                    true) }}'
                  confirmation_user_id: '{{ wait.trigger.event.context.user_id | default('''',
                    true) }}'
            - action: light.turn_on
            - action: ha_notifications.report
              data:
                alert_id: matrix_confirmation_with_bounded_repeat
                alert_name: Low water
                flow_id: '{{ context.parent_id or context.id }}'
                status: action_executed
                run_id: '{{ context.parent_id or context.id }}'
                message: Automation action executed
                details:
                  action: light.turn_on
            - action: ha_notifications.report
              data:
                alert_id: matrix_confirmation_with_bounded_repeat
                alert_name: Low water
                flow_id: '{{ context.parent_id or context.id }}'
                status: confirmation_completed
                run_id: '{{ context.parent_id or context.id }}'
                message: Confirmation completed
                details:
                  action: confirmation_completed
                  device_id: '{{ wait.trigger.event.data.device_id | default('''', true)
                    }}'
                  user_id: '{{ wait.trigger.event.context.user_id | default('''', true)
                    }}'
            - stop: confirmation completed
          - conditions:
            - condition: template
              value_template: '{{ wait.trigger.id == ''cancel_run'' }}'
            sequence:
            - action: ha_notifications.report
              data:
                alert_id: matrix_confirmation_with_bounded_repeat
                alert_name: Low water
                flow_id: '{{ context.parent_id or context.id }}'
                status: cancelled
                run_id: '{{ context.parent_id or context.id }}'
                message: Automation run cancelled
                details:
                  action: confirmation_cancelled
            - stop: Confirmation ended
          default: []
    - action: ha_notifications.report
      data:
        alert_id: matrix_confirmation_with_bounded_repeat
        alert_name: Low water
        flow_id: '{{ context.parent_id or context.id }}'
        status: confirmation_timeout
        run_id: '{{ context.parent_id or context.id }}'
        message: Confirmation timed out
        details:
          action: confirmation_timeout
    - stop: Confirmation ended
  '''
# ---
# name: test_option_matrix_generates_valid_native_automations[confirmation_without_reminders-overrides2]
  '''
  id: ha_notifications_matrix_confirmation_without_reminders
  alias: 'HA Notifications: Low water'
  description: Generated by HA Notifications. Do not edit manually.
  initial_state: true
  mode: parallel
  triggers:
  - trigger: state
    entity_id: sensor.water
  - trigger: homeassistant
    event: start
  conditions:
  - condition: numeric_state
    entity_id: sensor.water
    below: 20
  actions:
  - action: ha_notifications.report
    data:
      alert_id: matrix_confirmation_without_reminders
      alert_name: Low water
      flow_id: '{{ context.parent_id or context.id }}'
      status: started
      run_id: '{{ context.parent_id or context.id }}'
      details:
        action: automation_started
        started_by:
          platform: '{{ trigger.platform if trigger is defined and trigger.platform
            is defined else '''' }}'
          id: '{{ trigger.id if trigger is defined and trigger.id is defined else ''''
            }}'
          description: '{{ (trigger | default({})).description | default('''', true)
            }}'
          entity_id: '{{ trigger.entity_id if trigger is defined and trigger.entity_id
            is defined else '''' }}'
          from_state: '{{ trigger.from_state.state if trigger is defined and trigger.from_state
            is defined and trigger.from_state else '''' }}'
          to_state: '{{ trigger.to_state.state if trigger is defined and trigger.to_state
            is defined and trigger.to_state else '''' }}'
          event_type: '{{ trigger.event.event_type if trigger is defined and trigger.platform
            == ''event'' and trigger.event is defined and trigger.event else '''' }}'
  - action: ha_notifications.send
    data:
      alert_id: matrix_confirmation_without_reminders
      alert_name: Low water
      flow_id: '{{ context.parent_id or context.id }}'
      target:
        entity_id:
        - notify.phone
        - notify.tablet
      data:
        message: Low water
        actions:
        - action: ha_notifications_matrix_confirmation_without_reminders_confirmation_confirm
          title: Confirm
  - action: ha_notifications.report
    data:
      alert_id: matrix_confirmation_without_reminders
      alert_name: Low water
      flow_id: '{{ context.parent_id or context.id }}'
      status: waiting
      run_id: '{{ context.parent_id or context.id }}'
      message: Waiting for confirmation
      details:
        action: confirmation_waiting
  - wait_for_trigger:
    - trigger: event
      event_type: mobile_app_notification_action
      id: confirmation
      event_data:
        action: ha_notifications_matrix_confirmation_without_reminders_confirmation_confirm
    - trigger: event
      event_type: ha_notifications_command
      id: cancel_run
      event_data:
        alert_id: matrix_confirmation_without_reminders
        command: cancel_run
    - trigger: event
      event_type: ha_notifications_command
      id: skip_confirmation
      event_data:
        alert_id: matrix_confirmation_without_reminders
        command: skip_confirmation
    timeout:
      minutes: 15
    continue_on_timeout: true
  - choose:
    - conditions:
      - condition: template
        value_template: '{{ wait.trigger.id == ''confirmation'' }}'
      sequence:
      - action: ha_notifications.send
        data:
          alert_id: matrix_confirmation_without_reminders
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          target:
            entity_id:
            - notify.phone
            - notify.tablet
          data:
            template_message: '{% raw %}Confirmed{% endraw %}'
            confirmation_device_id: '{{ wait.trigger.event.data.device_id | default('''',
              true) }}'
            confirmation_user_id: '{{ wait.trigger.event.context.user_id | default('''',
              true) }}'
      - action: ha_notifications.report
        data:
          alert_id: matrix_confirmation_without_reminders
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          status: confirmation_completed
          run_id: '{{ context.parent_id or context.id }}'
          message: Confirmation completed
          details:
            action: confirmation_completed
            device_id: '{{ wait.trigger.event.data.device_id | default('''', true) }}'
            user_id: '{{ wait.trigger.event.context.user_id | default('''', true) }}'
      - stop: confirmation completed
    - conditions:
      - condition: template
        value_template: '{{ wait.trigger.id == ''cancel_run'' }}'
      sequence:
      - action: ha_notifications.report
        data:
          alert_id: matrix_confirmation_without_reminders
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          status: cancelled
          run_id: '{{ context.parent_id or context.id }}'
          message: Automation run cancelled
          details:
            action: confirmation_cancelled
      - stop: Confirmation ended
    default:
    - action: ha_notifications.report
      data:
        alert_id: matrix_confirmation_without_reminders
        alert_name: Low water
        flow_id: '{{ context.parent_id or context.id }}'
        status: confirmation_timeout
        run_id: '{{ context.parent_id or context.id }}'
        message: Confirmation timed out
        details:
          action: confirmation_timeout
    - stop: Confirmation ended
  '''
# ---
# name: test_option_matrix_generates_valid_native_automations[disabled_optional_features-overrides4]
  '''
  id: ha_notifications_matrix_disabled_optional_features
  alias: 'HA Notifications: Low water'
  description: Generated by HA Notifications. Do not edit manually.
  initial_state: true
  mode: parallel
  triggers:
  - trigger: state
    entity_id: sensor.water
  - trigger: homeassistant
    event: start
  conditions:
  - condition: numeric_state
    entity_id: sensor.water
    below: 20
  actions:
  - action: ha_notifications.report
    data:
      alert_id: matrix_disabled_optional_features
      alert_name: Low water
      flow_id: '{{ context.parent_id or context.id }}'
      status: started
      run_id: '{{ context.parent_id or context.id }}'
      details:
        action: automation_started
        started_by:
          platform: '{{ trigger.platform if trigger is defined and trigger.platform
            is defined else '''' }}'
          id: '{{ trigger.id if trigger is defined and trigger.id is defined else ''''
            }}'
          description: '{{ (trigger | default({})).description | default('''', true)
            }}'
          entity_id: '{{ trigger.entity_id if trigger is defined and trigger.entity_id
            is defined else '''' }}'
          from_state: '{{ trigger.from_state.state if trigger is defined and trigger.from_state
            is defined and trigger.from_state else '''' }}'
          to_state: '{{ trigger.to_state.state if trigger is defined and trigger.to_state
            is defined and trigger.to_state else '''' }}'
          event_type: '{{ trigger.event.event_type if trigger is defined and trigger.platform
            == ''event'' and trigger.event is defined and trigger.event else '''' }}'
  - action: ha_notifications.send
    data:
      alert_id: matrix_disabled_optional_features
      alert_name: Low water
      flow_id: '{{ context.parent_id or context.id }}'
      target:
        entity_id:
        - notify.phone
        - notify.tablet
      data:
        message: Low water
  - action: ha_notifications.report
    data:
      alert_id: matrix_disabled_optional_features
      alert_name: Low water
      flow_id: '{{ context.parent_id or context.id }}'
      status: completed
      run_id: '{{ context.parent_id or context.id }}'
      details:
        action: automation_completed
  '''
# ---
# name: test_option_matrix_generates_valid_native_automations[post_send_enabled-overrides1]
  '''
  id: ha_notifications_matrix_post_send_enabled
  alias: 'HA Notifications: Low water'
  description: Generated by HA Notifications. Do not edit manually.
  initial_state: true
  mode: parallel
  triggers:
  - trigger: state
    entity_id: sensor.water
  - trigger: homeassistant
    event: start
  conditions:
  - condition: numeric_state
    entity_id: sensor.water
    below: 20
  actions:
  - action: ha_notifications.report
    data:
      alert_id: matrix_post_send_enabled
      alert_name: Low water
      flow_id: '{{ context.parent_id or context.id }}'
      status: started
      run_id: '{{ context.parent_id or context.id }}'
      details:
        action: automation_started
        started_by:
          platform: '{{ trigger.platform if trigger is defined and trigger.platform
            is defined else '''' }}'
          id: '{{ trigger.id if trigger is defined and trigger.id is defined else ''''
            }}'
          description: '{{ (trigger | default({})).description | default('''', true)
            }}'
          entity_id: '{{ trigger.entity_id if trigger is defined and trigger.entity_id
            is defined else '''' }}'
          from_state: '{{ trigger.from_state.state if trigger is defined and trigger.from_state
            is defined and trigger.from_state else '''' }}'
          to_state: '{{ trigger.to_state.state if trigger is defined and trigger.to_state
            is defined and trigger.to_state else '''' }}'
          event_type: '{{ trigger.event.event_type if trigger is defined and trigger.platform
            == ''event'' and trigger.event is defined and trigger.event else '''' }}'
  - action: ha_notifications.send
    data:
      alert_id: matrix_post_send_enabled
      alert_name: Low water
      flow_id: '{{ context.parent_id or context.id }}'
      target:
        entity_id:
        - notify.phone
        - notify.tablet
      data:
        message: Low water
  - action: logbook.log
  - action: ha_notifications.report
    data:
      alert_id: matrix_post_send_enabled
      alert_name: Low water
      flow_id: '{{ context.parent_id or context.id }}'
      status: action_executed
      run_id: '{{ context.parent_id or context.id }}'
      message: Automation action executed
      details:
        action: logbook.log
  - action: ha_notifications.report
    data:
      alert_id: matrix_post_send_enabled
      alert_name: Low water
      flow_id: '{{ context.parent_id or context.id }}'
      status: completed
      run_id: '{{ context.parent_id or context.id }}'
      details:
        action: automation_completed
  '''
# ---
